# ChangeLog for gnome-base/libgnomeui
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/ChangeLog,v 1.166 2009/03/06 15:37:08 ranger Exp $

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libgnomeui-2.24.0.ebuild:
  Marking libgnomeui-2.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libgnomeui-2.24.0.ebuild:
  Marking libgnomeui-2.24.0 ppc64 stable for bug 260063

  13 Nov 2008; Brent Baude <ranger@gentoo.org> libgnomeui-2.22.1.ebuild:
  Marking libgnomeui-2.22.1 ppc64 stable for bug 236971

*libgnomeui-2.24.0 (28 Sep 2008)

  28 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  -files/libgnomeui-2.22.01-fix-thumbnailing-over-gvfs-mounts.patch,
  -libgnomeui-2.22.01.ebuild, +libgnomeui-2.24.0.ebuild:
  Major version bump. Removes GtkFileChooser backends because gtk+-2.14
  provides VFS supports on its own now and does not support filesystem
  backends anymore that aren't provided by GIO and gnome-base/gvfs
  infrastructure. Make sure to have gnome-base/gvfs if you want remote
  filesystem support in the standard GTK+ file dialog.

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> ChangeLog:
  Stable for HPPA (bug #236971).

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> libgnomeui-2.22.1.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> libgnomeui-2.22.1.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> libgnomeui-2.22.1.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> libgnomeui-2.22.1.ebuild:
  Marking libgnomeui-2.22.1 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> libgnomeui-2.22.1.ebuild:
  Stable on amd64, bug #229709

  08 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -libgnomeui-2.16.1.ebuild, -libgnomeui-2.18.1.ebuild:
  clean up old revisions.
