@@ -2,8 +2,10 @@ AUX libgnomeui-2.19.1-enable-druid.patch 3371 RMD160 5db849ebe6c6f9498e308cb2b0d
 DIST libgnomeui-2.20.1.1.tar.bz2 1445994 RMD160 90caad97c85250435299923c90ffa730dbdfd288 SHA1 e1704b328de6f6f7130147062b3262b3df77484a SHA256 133933c70234ecd4560cec165034c21c94598c24c34138ed1ee1770f52328cef
 DIST libgnomeui-2.22.1.tar.bz2 1450063 RMD160 222362add689353aa5f7a68767b60588d33245cf SHA1 fedbc56ac42d32e97310220469a8d6c52c3732cc SHA256 7631bc19eab79412ec621e3bc98e94185d79ae59946990f54a09b80940385ad7
 DIST libgnomeui-2.24.0.tar.bz2 1468372 RMD160 4a6e04de2de01718e51a23603a7b983068994b00 SHA1 9cd1b8ea7bf5df385ca30585a2911e4151b6190a SHA256 9ecf81d3ad2e1ec0b371d720b37154e8b716af1cd464dbeb06232f8fa4c5e07d
-EBUILD libgnomeui-2.20.1.1.ebuild 1172 RMD160 c009d0b6c71c538f50cbcc890bf969e1205c22be SHA1 faaab28d839973a7c08b4c8fcafffcb316a87a5a SHA256 07bfe324237f954f8e115606543f1d4a0501968db46f5338e43444c53e6a9319
+DIST libgnomeui-2.24.1.tar.bz2 1494605 RMD160 b8c57e6cf2ba1667f7926b135121ef34e8c4167d SHA1 b95cd3da3908896bd09b129bcbe3a6eba7d37dd5 SHA256 a2ed289b7b35956eff7ddd4d9f4e2507260a7fcb5d7d01969f2e3bb8278e8dc1
+EBUILD libgnomeui-2.20.1.1.ebuild 1169 RMD160 8a1868899f7030a4604c069edd076188e43e200f SHA1 736b0de334394993fc7e1376d75bd8c23259fa65 SHA256 b5b6658e89e6200fdf7da59a449598a89cfe66709b8a1f36fcc3efeee5972e72
 EBUILD libgnomeui-2.22.1.ebuild 1222 RMD160 02cf6e9ebc4046a024d1b0a01771e03835e003fb SHA1 4e4340a9b91372a2cf55597c7bcb313cbf5df1a9 SHA256 21e7ac27c97747eb142d6fa35bfc386a60330cfb2bca2885caccfb31340056cc
 EBUILD libgnomeui-2.24.0.ebuild 1267 RMD160 471160a721c7413445e9a4bff77ef19e0b4fc488 SHA1 d9f41a6e0a13176d4dafc5d63fda2321ba853c09 SHA256 722a73a3501bfec84d7ff6a0932afbe94e490ac5eb8238f116ff3528d8b0c334
-MISC ChangeLog 20651 RMD160 8fb57596e0c0a988ac0864c40d05fc41966c2ceb SHA1 fbf9ae6634db697a16454ba9fc09c0a8f1694b83 SHA256 575f83b1582aef0a05463d3c08f5bece779ddc332150c41353660ffa49a8cd44
+EBUILD libgnomeui-2.24.1.ebuild 1282 RMD160 5ca71768ffc924e963326764a57c7fe796f91df7 SHA1 f5a1b140104e0f50e6d9eeb32b77664aa29b845f SHA256 a47fb8edb182acf567321a4e0cd3dee2cc58c9faa6430d1b9a6a3a2a913c1e13
+MISC ChangeLog 20861 RMD160 1617ba8405afd8360f6fd5aed8032b85cde03b6d SHA1 8afecf79a5cf60d8ca03a73117648192d0132c79 SHA256 7e249590afa559d69735e7c00554b802aa80de989c631b7b02b7b8dd0b0a157e
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
