@@ -1,8 +1,10 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/libgnomeui-2.20.1.1.ebuild,v 1.9 2009/03/08 01:36:03 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/libgnomeui-2.24.1.ebuild,v 1.1 2009/03/08 01:36:03 eva Exp $
 
 EAPI="prefix"
+
+GCONF_DEBUG="no"
 
 inherit eutils gnome2
 
@@ -11,26 +13,26 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux"
-IUSE="doc jpeg"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
+IUSE="doc"
 
+# gtk+-2.14 dep instead of 2.12 ensures system doesn't loose VFS capabilities in GtkFilechooser
 RDEPEND=">=dev-libs/libxml2-2.4.20
 	>=gnome-base/libgnome-2.13.7
 	>=gnome-base/libgnomecanvas-2
 	>=gnome-base/libbonoboui-2.13.1
 	>=gnome-base/gconf-2
 	>=x11-libs/pango-1.1.2
-	>=dev-libs/glib-2.13.4
-	>=x11-libs/gtk+-2.11.5
+	>=dev-libs/glib-2.16
+	>=x11-libs/gtk+-2.14
 	>=gnome-base/gnome-vfs-2.7.3
 	>=gnome-base/libglade-2
 	>=gnome-base/gnome-keyring-0.4
-	>=dev-libs/popt-1.5
-	jpeg? ( media-libs/jpeg )"
+	>=dev-libs/popt-1.5"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
 	>=dev-util/pkgconfig-0.9
-	>=dev-util/intltool-0.35
+	>=dev-util/intltool-0.40
 	doc? ( >=dev-util/gtk-doc-1 )"
 
 PDEPEND="x11-themes/gnome-icon-theme"
@@ -38,7 +40,7 @@ PDEPEND="x11-themes/gnome-icon-theme"
 DOCS="AUTHORS ChangeLog NEWS README"
 
 pkg_setup() {
-	G2CONF="$(use_with jpeg libjpeg)"
+	G2CONF="${G2CONF} $(use_with jpeg libjpeg)"
 }
 
 src_unpack() {
@@ -47,3 +49,4 @@ src_unpack() {
 	# Re-enable deprecated gnome druid code
 	epatch "${FILESDIR}"/${PN}-2.19.1-enable-druid.patch
 }
+
