@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/libgnomeui
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/ChangeLog,v 1.166 2009/03/06 15:37:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/ChangeLog,v 1.167 2009/03/08 01:36:03 eva Exp $
+
+*libgnomeui-2.24.1 (08 Mar 2009)
+
+  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  libgnomeui-2.20.1.1.ebuild, +libgnomeui-2.24.1.ebuild:
+  Bump to 2.24.1. Build fixes, leak fixes and translation updates.
 
   06 Mar 2009; Brent Baude <ranger@gentoo.org> libgnomeui-2.24.0.ebuild:
   Marking libgnomeui-2.24.0 ppc stable for bug 260063
